--- a/src/management/moderation/components/moderation-offer/moderation-offer.html
+++ b/src/management/moderation/components/moderation-offer/moderation-offer.html
@@ -1,4 +1,5 @@
-<small ng-if="moc.next" class="muted">Valideren</small>
+<p ng-show="moc.continueValidation()" class="text-muted">Valideren</p>
+
 <button ng-if="moc.isReadyForValidation()" type="submit" class="btn btn-success btn-moderation" ng-click="moc.approve()">
                 <i class="fa fa-flag text-success"></i>Goedkeuren</button>
 <button ng-if="moc.isReadyForValidation()" type="submit" class="btn btn-danger btn-moderation" ng-click="moc.askForRejectionReasons()">
@@ -6,4 +7,5 @@
 
 <span ng-if="moc.isApproved()" class="offer-approved text-success btn-moderation"><i class="fa fa-flag"></i>Goedgekeurd</span>
 <span ng-if="moc.isRejected()" class="offer-rejected text-danger btn-moderation"><i class="fa fa-flag"></i>Afgekeurd</span>
-<a ui-sref="management.moderation.list" ui-sref-opts="{reload:true}" id="continue-validation" ng-if="(moc.isApproved() || moc.isRejected())">Verder valideren</a>
+
+<span ng-show="moc.continueValidation()"><a ui-sref="management.moderation.list" ui-sref-opts="{reload:true}" id="continue-validation" ng-if="(moc.isApproved() || moc.isRejected())">Verder valideren</a></span>
