III-2089 fixes after qa

--- a/src/core/components/image-detail/image-detail.directive.html
+++ b/src/core/components/image-detail/image-detail.directive.html
@@ -1,6 +1,6 @@
 <tr ng-class="::{muted: !images.length}">
     <td>
-        <span class="def">Afbeeldingen</span>
+        <span class="row-label">Afbeeldingen</span>
     </td>
     <td ng-if="::images.length">
         <ul class="list-unstyled media-list">
