III-2089 fixes after qa

--- a/src/styles/event-detail.less
+++ b/src/styles/event-detail.less
@@ -70,8 +70,8 @@ img.offer-image-main {
   max-height: 300px;
 }
 
-table.event-detail-price-table {
-  background-color: #fff !important;
+.event-detail-price-table {
+  margin-bottom: 0;
 }
 
 .row-label {
