III-2061 fix z-index

--- a/src/styles/job-log.less
+++ b/src/styles/job-log.less
@@ -10,7 +10,7 @@
   background: #ffffff;
   border-right: silver;
   padding: 10px;
-  z-index: 75;
+  z-index: @zindex-joblog;
 
   .repeat-animation.ng-enter {
     -webkit-transition: all linear 1s;
@@ -84,7 +84,7 @@
   bottom: 0;
   background: #000;
   opacity: 0.5;
-  z-index: 50;
+  z-index: @zindex-joblog-background;
   display:none;
 }
 
