III-2109 remove Today button on date picker if disabled, change text if date is empty

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -786,3 +786,9 @@ form.booking-period {
 .padding-left-12-5{
     padding-left: 12.5px;
 }
+
+.uib-datepicker-popup{
+    .btn.disabled, .btn[disabled], fieldset[disabled] .btn{
+        display: none;
+    }
+}
