--- a/src/event_form/components/publish-modal/event-form-publish-modal.html
+++ b/src/event_form/components/publish-modal/event-form-publish-modal.html
@@ -31,7 +31,7 @@
     </div>
     <br>
     <div class="alert alert-warning" ng-if="efpmc.error==='past'">Een publicatiedatum kan niet in het verleden liggen.</div>
-    <div class="alert alert-warning" ng-if="efpmc.error==='empty'">Kies een publicatiedatum alvorens op te slaan.</div>
+    <div class="alert alert-warning" ng-if="efpmc.error==='empty'">Kies een publicatiedatum.</div>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" ng-click="efpmc.dismiss();" data-dismiss="modal">
