--- a/src/styles/udb-variables.less
+++ b/src/styles/udb-variables.less
@@ -10,3 +10,18 @@
 // Specific varables
 @job-log-width: 320px;
 @rv-item-info-padding: 0.5em;
+
+//
+//-- Z-index master list
+// commented lines are bootstrap default values and only as reference
+
+//@zindex-navbar:            1000;
+//@zindex-dropdown:          1000;
+//@zindex-navbar-fixed:      1030;
+@z-index-publishbar:       @zindex-navbar-fixed;
+@zindex-joblog-background:  1028;
+@zindex-joblog:             1029;
+//@zindex-modal-background:  1040;
+//@zindex-modal:             1050;
+//@zindex-popover:           1060;
+//@zindex-tooltip:           1070;
