--- a/src/styles/udb3-angular.less
+++ b/src/styles/udb3-angular.less
@@ -31,3 +31,4 @@
 @import "management-form.less";
 @import "moderation.less";
 @import "organization-search-item.less";
+@import "organizer-edit.less";
