--- a/src/event_form/components/organizer-address/organizer-address.html
+++ b/src/event_form/components/organizer-address/organizer-address.html
@@ -2,49 +2,101 @@
     <div class="row">
         <div class="col-sm-12 col-md-8">
             <div class="form-group"
-                 ng-class="{'has-error' : oac.streetHasErrors}">
+                 ng-if="oac.requiredAddress"
+                 ng-class="{'has-error' : oac.organizerAddressForm.street.$touched && oac.organizerAddressForm.street.$invalid}">
                 <label>Straat en nummer</label>
                 <input type="text"
                        class="form-control"
                        name="street"
-                       ng-change="oac.validateStreet()"
+                       placeholder="Straat en nummer"
                        ng-model="oac.address.streetAddress"
+                       ng-change="oac.validateAddress()"
+                       ng-model-options="{ updateOn: 'blur' }"
+                       required>
+                <ng-messages for="oac.organizerAddressForm.street.$error"
+                             class="has-error"
+                             ng-show="oac.organizerAddressForm.street.$touched && oac.organizerAddressForm.street.$invalid">
+                    <ng-message when="required"
+                                class="help-block">
+                        Gelieve straat en nummer in te geven.
+                    </ng-message>
+                </ng-messages>
+            </div>
+            <div class="form-group"
+                 ng-if="!oac.requiredAddress">
+                <label>Straat en nummer</label>
+                <input type="text"
+                       class="form-control"
+                       name="street"
+                       placeholder="Straat en nummer"
+                       ng-model="oac.address.streetAddress"
+                       ng-change="oac.validateAddress()"
                        ng-model-options="{ updateOn: 'blur' }">
-                <span class="help-block" ng-show="oac.streetHasErrors">
-                    Gelieve straat en nummer in te geven.
-                </span>
             </div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-sm-12 col-md-8">
-            <div class="form-group"
-                 ng-hide="oac.selectedCity !== ''"
-                 ng-class="{'has-error' : oac.cityHasErrors}">
-                <label for="organizer-gemeente-autocomplete" id="gemeente-label">
-                    Gemeente
-                </label>
-                <div id="gemeente-kiezer">
-                    <input id="organizer-gemeente-autocomplete"
-                           type="text"
-                           class="form-control uib-typeahead"
-                           placeholder="Gemeente of postcode"
-                           ng-model="oac.cityAutocompleteTextField"
-                           uib-typeahead="city as city.zip + ' ' + city.name for city in oac.cities | filter:oac.filterCities($viewValue) | orderBy:oac.orderByLevenshteinDistance($viewValue)"
-                           typeahead-on-select="oac.selectCity($item, $label)"
-                           typeahead-min-length="2"
-                           typeahead-template-url="templates/city-suggestion.html"
-                           autocomplete="off">
-                    <span class="help-block" ng-show="oac.cityAutoCompleteError">
-                        Er was een probleem tijdens het ophalen van de steden.
-                    </span>
-                    <span class="help-block" ng-show="oac.cityHasErrors">
-                        Gelieve een gemeente in te geven.
-                    </span>
+            <div ng-hide="oac.selectedCity !== ''">
+                <div class="form-group"
+                     ng-if="oac.requiredAddress"
+                     ng-class="{'has-error' : (oac.organizerAddressForm.city.$touched && oac.organizerAddressForm.city.$invalid)
+                     || (oac.organizerAddressForm.street.$touched && oac.organizerAddressForm.street.$invalid)}">
+                    <label for="organizer-gemeente-autocomplete" id="gemeente-label">
+                        Gemeente
+                    </label>
+                    <div id="gemeente-kiezer">
+                        <input id="organizer-gemeente-autocomplete"
+                               type="text"
+                               name="city"
+                               class="form-control uib-typeahead"
+                               placeholder="Gemeente of postcode"
+                               ng-model="oac.cityAutocompleteTextField"
+                               uib-typeahead="city as city.zip + ' ' + city.name for city in oac.cities | filter:oac.filterCities($viewValue) | orderBy:oac.orderByLevenshteinDistance($viewValue)"
+                               typeahead-on-select="oac.selectCity($item, $label)"
+                               typeahead-min-length="2"
+                               typeahead-template-url="templates/city-suggestion.html"
+                               autocomplete="off"
+                               required>
+                        <span class="help-block" ng-show="oac.cityAutoCompleteError">
+                            Er was een probleem tijdens het ophalen van de steden.
+                        </span>
+                        <ng-messages for="oac.organizerAddressForm.city.$error"
+                                     class="has-error"
+                                     ng-show="(oac.organizerAddressForm.city.$touched && oac.organizerAddressForm.city.$invalid)
+                                     || (oac.organizerAddressForm.street.$touched && oac.organizerAddressForm.street.$invalid)">
+                            <ng-message when="required"
+                                        class="help-block">
+                                Gelieve een gemeente in te geven.
+                            </ng-message>
+                        </ng-messages>
+                    </div>
+                </div>
+                <div class="form-group"
+                     ng-if="!oac.requiredAddress">
+                    <label for="organizer-gemeente-autocomplete" id="gemeente-label">
+                        Gemeente
+                    </label>
+                    <div id="gemeente-kiezer">
+                        <input id="organizer-gemeente-autocomplete"
+                               type="text"
+                               name="city"
+                               class="form-control uib-typeahead"
+                               placeholder="Gemeente of postcode"
+                               ng-model="oac.cityAutocompleteTextField"
+                               uib-typeahead="city as city.zip + ' ' + city.name for city in oac.cities | filter:oac.filterCities($viewValue) | orderBy:oac.orderByLevenshteinDistance($viewValue)"
+                               typeahead-on-select="oac.selectCity($item, $label)"
+                               typeahead-min-length="2"
+                               typeahead-template-url="templates/city-suggestion.html"
+                               autocomplete="off"
+                               required>
+                        <span class="help-block" ng-show="oac.cityAutoCompleteError">
+                            Er was een probleem tijdens het ophalen van de steden.
+                        </span>
+                    </div>
                 </div>
             </div>
-
             <div class="form-group" id="gemeente-gekozen" ng-if="oac.selectedCity">
                 <span class="btn-chosen" id="gemeente-gekozen-button" ng-bind="::oac.selectedCity"></span>
                 <a href="#" class="btn btn-default btn-link" ng-click="oac.changeCitySelection()">Wijzigen</a>
