--- a/src/event_form/components/organizer-address/organizer-address.html
+++ b/src/event_form/components/organizer-address/organizer-address.html
@@ -10,8 +10,6 @@
                        name="street"
                        placeholder="Straat en nummer"
                        ng-model="oac.address.streetAddress"
-                       ng-change="oac.validateAddress()"
-                       ng-model-options="{ updateOn: 'blur' }"
                        required>
                 <ng-messages for="oac.organizerAddressForm.street.$error"
                              class="has-error"
@@ -23,15 +21,20 @@
                 </ng-messages>
             </div>
             <div class="form-group"
-                 ng-if="!oac.requiredAddress">
+                 ng-if="!oac.requiredAddress"
+                 ng-class="{'has-error' : oac.streetHasErrors && oac.organizerAddressForm.$submitted}">
                 <label>Straat en nummer</label>
                 <input type="text"
                        class="form-control"
                        name="street"
                        placeholder="Straat en nummer"
-                       ng-model="oac.address.streetAddress"
-                       ng-change="oac.validateAddress()"
-                       ng-model-options="{ updateOn: 'blur' }">
+                       ng-model="oac.address.streetAddress">
+                <span class="has-error"
+                      ng-show="oac.streetHasErrors && oac.organizerAddressForm.$submitted">
+                    <span class="help-block">
+                        Gelieve straat en nummer in te geven.
+                    </span>
+                </span>
             </div>
         </div>
     </div>
@@ -74,7 +77,8 @@
                     </div>
                 </div>
                 <div class="form-group"
-                     ng-if="!oac.requiredAddress">
+                     ng-if="!oac.requiredAddress"
+                     ng-class="{'has-error' : oac.cityHasErrors && oac.organizerAddressForm.$submitted}">
                     <label for="organizer-gemeente-autocomplete" id="gemeente-label">
                         Gemeente
                     </label>
@@ -89,10 +93,15 @@
                                typeahead-on-select="oac.selectCity($item, $label)"
                                typeahead-min-length="2"
                                typeahead-template-url="templates/city-suggestion.html"
-                               autocomplete="off"
-                               required>
+                               autocomplete="off">
                         <span class="help-block" ng-show="oac.cityAutoCompleteError">
                             Er was een probleem tijdens het ophalen van de steden.
+                        </span>
+                        <span class="has-error"
+                              ng-show="oac.cityHasErrors && oac.organizerAddressForm.$submitted">
+                            <span class="help-block">
+                                Gelieve een gemeente in te geven.
+                            </span>
                         </span>
                     </div>
                 </div>
